--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
 body {
     padding: 2em 2em 0em;
+    display: flex;
+    flex-direction: row;
+}
+
+nav {
+    flex-basis: 20%;
+    /* padding-right: 1em; */
+    padding-right: 0em;
+    border-right: thin black solid;
+}
+
+main {
+    padding-left: 1em;
+    flex-basis: 80%;
 }
 
 input, textarea {
@@ -7,13 +21,14 @@ input, textarea {
     width: 100%;
 }
 
-/* textarea, textarea:focus {
+textarea, textarea:focus {
     border: none;
-} */
+}
 
 textarea {
     resize: none;
-    height: 70vh;
+    /* height: 70vh; */
+    height: 93vh;
 }
 
 ul {
@@ -35,3 +50,8 @@ li {
 li:hover {
     background-color: #F1F1F1;
 }
+
+
+/* 
+font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif;
+ */
